--- a/README
+++ b/README
@@ -2,3 +2,5 @@ human.c
 =======
 
 C-based platform for human. It distributed under the 'Public Domain' license.
+
+Need a job! "Open Source" first.
