--- a/README
+++ b/README
@@ -4,3 +4,4 @@ human.c
 C-based platform for human. It distributed under the 'Public Domain' license.
 
 Need a job! "Open Source" first.
+EMail: elf198012@gmail.com
