--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 human.c
 =======
 
-C-based platform for human. It distributed under the 'Public Domain' license.
+C-based platform/library for human being. It distributed under the 'Public Domain' license.
 
 Need a job! "Open Source" first.
 EMail: elf198012@gmail.com
